# agentoven

./: .gitignore  AUTH-PLAN.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ISSUES.md  LICENSE  Makefile  NOTICE  README.md  ROADMAP.md  docker-compose.yml
.github/: AI-POLICY.md  FUNDING.yml
.github/workflows/: ci.yml  release.yml
ADR/: 0001-use-adr-for-decisions.md  0002-pluggable-auth-provider-chain.md  0003-open-core-two-repo-model.md  0004-provider-first-embedding-architecture.md  0005-kitchen-metaphor-domain-language.md  0006-python-sdk-reqwest-blocking.md  0007-control-plane-as-a2a-gateway.md  0008-three-layer-product-architecture.md  0009-pluggable-test-runner-architecture.md  0010-kitchen-level-compliance-policies.md  0011-oss-local-test-runner.md  0012-agent-packaging-distribution.md  0013-agent-to-ui-protocol.md  README.md
control-plane/: .gitignore  Dockerfile  go.mod  go.sum
control-plane/cmd/server/: main.go
control-plane/dashboard/: index.html  package-lock.json  package.json  vite.config.ts
control-plane/dashboard/src/: App.tsx  api.ts  hooks.ts  index.css
control-plane/dashboard/src/components/: AgentLogViewer.tsx  Layout.tsx  ModelCatalogPicker.tsx  UI.tsx
control-plane/dashboard/src/pages/: AgentTest.tsx  Agents.tsx  Catalog.tsx  Connectors.tsx  Embeddings.tsx  Overview.tsx  PipelineView.tsx  Prompts.tsx  Providers.tsx  RAGPipelines.tsx  Recipes.tsx  Tools.tsx  TraceDetail.tsx  Traces.tsx  VectorStores.tsx
control-plane/internal/api/: router.go
control-plane/internal/api/handlers/: handlers.go  handlers_test.go  rag_handlers.go
control-plane/internal/api/middleware/: apikey.go  apikey_test.go  auth.go  logger.go  telemetry.go  tenant.go
control-plane/internal/auth/: apikey_provider.go  chain.go  scoped_key_provider.go  service_account.go
control-plane/internal/catalog/: catalog.go
control-plane/internal/config/: config.go
control-plane/internal/ctxwindow/: ctxwindow.go
control-plane/internal/db/migrations/: 001_initial.down.sql  001_initial.up.sql
control-plane/internal/embeddings/: ollama.go  openai.go  provider_adapter.go  registry.go
control-plane/internal/executor/: executor.go
control-plane/internal/guardrails/: guardrails.go
control-plane/internal/integrations/: doc.go
control-plane/internal/integrations/langchain/: adapter.go
control-plane/internal/integrations/langfuse/: bridge.go
control-plane/internal/integrations/picoclaw/: adapter.go  gateway.go  heartbeat.go
control-plane/internal/integrations/ragas/: Dockerfile  mcp_tool.go  server.py
control-plane/internal/mcpgw/: gateway.go
control-plane/internal/notify/: service.go
control-plane/internal/process/: docker.go  k8s.go  local.go  logbuffer.go  manager.go
control-plane/internal/process/templates/: agent_runner.py
control-plane/internal/rag/: chunker.go  external.go  ingest.go  pipeline.go  registry.go
control-plane/internal/resolver/: resolver.go
control-plane/internal/retention/: janitor.go  local_archiver.go
control-plane/internal/router/: gemini.go  router.go  router_test.go
control-plane/internal/sessions/: janitor.go  sessions.go
control-plane/internal/store/: memory.go  memory_test.go  store.go
control-plane/internal/telemetry/: telemetry.go
control-plane/internal/vectorstore/: embedded.go  pgvector.go  registry.go
control-plane/internal/workflow/: engine.go  engine_test.go
control-plane/pkg/contracts/: auth.go  contracts.go
control-plane/pkg/middleware/: identity.go  kitchen.go
control-plane/pkg/models/: models.go
control-plane/pkg/server/: server.go
crates/a2a-ao/: Cargo.toml  README.md
crates/a2a-ao/src/: agent_card.rs  artifact.rs  client.rs  lib.rs  message.rs  notification.rs  task.rs
crates/a2a-ao/src/transport/: jsonrpc.rs  mod.rs  sse.rs
crates/a2a-rs/: Cargo.toml  README.md
crates/a2a-rs/src/: artifact.rs  client.rs  error.rs  lib.rs  task.rs
crates/a2a-rs/src/transport/: sse.rs
crates/agentoven-cli/: Cargo.toml  README.md
crates/agentoven-cli/src/: main.rs
crates/agentoven-cli/src/commands/: agent.rs  apply.rs  config_cmd.rs  dashboard.rs  environment.rs  init.rs  kitchen.rs  local.rs  login.rs  mod.rs  pro_gate.rs  prompt.rs  provider.rs  rag.rs  recipe.rs  server.rs  service_account.rs  session.rs  test_suite.rs  tool.rs  trace.rs  use_cmd.rs
crates/agentoven-core/: Cargo.toml  README.md
crates/agentoven-core/src/: agent.rs  client.rs  config.rs  ingredient.rs  lib.rs  recipe.rs  router.rs  telemetry.rs
homebrew-tap/: README.md
homebrew-tap/Formula/: agentoven.rb
infra/: otel-collector-config.yaml
sdk/python/: Cargo.toml  README.md  pyproject.toml
sdk/python/agentoven/: __init__.py  _native.pyi
sdk/python/src/: lib.rs
sdk/typescript/: .gitignore  package-lock.json  package.json  tsconfig.json
sdk/typescript/native/: Cargo.toml
sdk/typescript/native/src/: lib.rs
sdk/typescript/src/: index.ts  native.d.ts  types.ts
site/: agentoven.code-workspace  index.html
