[package]
name = "a2a-ao"
description = "Rust SDK for the Agent-to-Agent (A2A) protocol — the open standard for agent interoperability (by AgentOven)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["a2a", "agent", "protocol", "ai", "interoperability"]
categories = ["api-bindings", "network-programming", "web-programming"]
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
schemars = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }

# SSE support
eventsource-stream = "0.2"
futures = "0.3"
tokio-stream = "0.1"
pin-project-lite = "0.2"

# JSON-RPC
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
wiremock = "0.6"
pretty_assertions = "1"
