[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "agentoven"
version = "0.4.1"
description = "AgentOven Python SDK — enterprise agent orchestration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["agents", "ai", "orchestration", "a2a", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://agentoven.dev"
Repository = "https://github.com/agentoven/agentoven"
Documentation = "https://docs.agentoven.dev"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "agentoven._native"
