[package]
name = "agentoven-napi"
version = "0.3.1"
edition = "2021"
authors = ["AgentOven Contributors"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi9", "async", "serde-json"] }
napi-derive = "2"
agentoven-core = { path = "../../../crates/agentoven-core" }
a2a-ao = { path = "../../../crates/a2a-ao" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
napi-build = "2"
